# voxel-editor

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
shaders/: mesh.frag.spv  mesh.vert  mesh.vert.spv  shadow.frag.spv  shadow.vert  shadow.vert.spv  ui.frag  ui.vert  voxel.frag  voxel.frag.spv  voxel.vert  voxel.vert.spv  voxel_new.frag  voxel_new.frag.spv
src/: camera.rs  color.rs  controls.rs  editor.rs  fps.rs  geometry.rs  light.rs  main.rs  renderer.rs  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shadow_shader.vert  ui.rs  vertex.rs  voxel_manager.rs  voxel_shader.frag  voxel_shader.frag.spv  voxel_shader.vert  voxel_shader.vert.spv
