[package]
name = "voxel-editor"
version = "0.1.0"
authors = ["Zakor <gyula.zakor@h-lab.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.camera_controllers]
package = "camera_controllers"
version = "0.31.0"
git = "https://github.com/zakorgy/camera_controllers"
rev = "3b50999f4bfe2d03756b2233dd2f59ea78a0494b"

[dependencies]
bytemuck = "1"
cgmath = "0.17"
env_logger = "0.7"
futures = "0.3"
log = "0.4"
winit = "0.22"
wgpu = "0.5.2"

[features]
debug_ray = []
