[package]
name = "voxel-editor"
version = "0.1.0"
authors = ["Gyula Zakor <zakorgy@inf.u-szeged.hu>"]
license = "Apache-2.0"
description = "A voxel editor tool"
readme = "README.md"
homepage = "https://github.com/zakorgy/voxel-editor"
repository = "https://github.com/zakorgy/voxel-editor"
keywords = ["editor", "voxel", "webgpu"]
categories = ["graphics","games","rendering"]
edition = "2018"

[dependencies.camera_controllers]
package = "camera_controllers"
version = "0.31.0"
git = "https://github.com/zakorgy/camera_controllers"
rev = "3b50999f4bfe2d03756b2233dd2f59ea78a0494b"

[dependencies.iced_winit]
package = "iced_winit"
version = "0.1.1"
git = "https://github.com/hecrj/iced"
rev = "00d66da0cee1dc7faeccc5b3f0794a0393a38da7"

[dependencies.iced_wgpu]
package = "iced_wgpu"
version = "0.2.2"
features = ["canvas"]
git = "https://github.com/hecrj/iced"
rev = "00d66da0cee1dc7faeccc5b3f0794a0393a38da7"

[dependencies]
bytemuck = "1"
cgmath = "0.17"
env_logger = "0.7"
futures = "0.3"
log = "0.4"
winit = "0.22"
tinyfiledialogs = "3.0"

[features]
#default = ["debug_ray"]
debug_ray = []

[replace]
"winit:0.22.2" = { git = "https://github.com/rust-windowing/winit", rev = "02a34a167ab281d7cca9908f67928b659d428b39" }

[build-dependencies.mml]
version = "0.1.59"
git = "https://github.com/adjivas/ml"
rev = "faaa46426382f17f4c2e628e23b28f72475c7f29"
